--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "cSpell.words": [
         "calculararea"
-    ]
+    ],
+    "java.configuration.updateBuildConfiguration": "interactive"
 }
